# django_app

./: .gitignore  docker-compose.yml
backend/: .env copy  Dockerfile  pyproject.toml
backend/api/: app.py  db.py
backend/django_app/: settings.py
backend/migration/: alembic.ini  env.py
docker/frontend/: Dockerfile
docker/jupyterLab/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
frontend/: Dockerfile  package-lock.json
jupyterLab/: pyproject.toml
jupyterLab/.Trash-0/info/: Untitled.ipynb.trashinfo  Untitled1.ipynb.trashinfo  テストデータ.csv.trashinfo
jupyterLab/clustering/: Untitled.ipynb  duration.csv  fararaf.csv  record_69.csv
jupyterLab/clustering/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
jupyterLab/data_analysis/: Book1.csv  Book1.xlsx  Untitled.ipynb  Untitled1.ipynb
jupyterLab/data_analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
jupyterLab/kintone/: kintone_post.ipynb
jupyterLab/kintone/.ipynb_checkpoints/: kintone_post-checkpoint.ipynb
jupyterLab/scraping/: Untitled.ipynb  requests.ipynb
jupyterLab/scraping/.ipynb_checkpoints/: requests-checkpoint.ipynb
jupyterLab/surveillance/: Untitled.ipynb
nginx/: Dockerfile  nginx.conf
osrm/: Dockerfile  setup.sh
postgresql/init/: init.sql
