[tool.poetry]
name = "jupyter-analysis"
version = "0.1.0"
description = ""
authors = ["masaki <ms.yamada732@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
jupyter-server = "^2.7.3"
jupyterlab = "^4.0.6"
notebook = "^7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
