[tool.poetry]
name = "jupyter-analysis"
version = "0.1.0"
description = ""
authors = ["masaki <ms.yamada732@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyter = "^1.0.0"
jupyter-server = "^2.7.3"
jupyterlab = "^4.0.6"
notebook = "^7.0.3"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^1.3.1"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
